# fizzbuzz-without-human-review

./: .gitignore  README.md  check.sh  pyproject.toml
src/fizzbuzz/: main.py
tests/: fizzbuzz_test.py
